--- a/test-game.html
+++ b/test-game.html
@@ -70,25 +70,25 @@
             module2.position.y = 2.8; // Center at y = 2.8
             station.add(module2);
 
-            // Conical ends (0.3 tall, 1.3 to 0.45 radius)
-            const coneGeometry = new THREE.CylinderGeometry(0.45, 1.3, 0.3, 32);
+            // Conical ends (0.3 tall, 1.3 to 0.65 radius)
+            const coneGeometry = new THREE.CylinderGeometry(1.3, 0.65, 0.3, 32); // Wide at module, narrow at port
             const coneMaterial = new THREE.MeshBasicMaterial({ color: 0x888888, wireframe: true });
             // Bottom end
             const coneBottom = new THREE.Mesh(coneGeometry, coneMaterial);
             coneBottom.position.y = -4.15; // -2 - 2 - 0.15
+            coneBottom.rotation.x = Math.PI; // Flip so wide end is at module
             station.add(coneBottom);
             // Top end
             const coneTop = new THREE.Mesh(coneGeometry, coneMaterial);
             coneTop.position.y = 5.95; // 2.8 + 2.8 + 0.15
-            coneTop.rotation.x = Math.PI; // Flip
             station.add(coneTop);
             // Middle (between modules)
             const coneMiddleBottom = new THREE.Mesh(coneGeometry, coneMaterial);
             coneMiddleBottom.position.y = 0.15; // Below y = 0
+            coneMiddleBottom.rotation.x = Math.PI; // Flip
             station.add(coneMiddleBottom);
             const coneMiddleTop = new THREE.Mesh(coneGeometry, coneMaterial);
             coneMiddleTop.position.y = 0.45; // Above y = 0
-            coneMiddleTop.rotation.x = Math.PI; // Flip
             station.add(coneMiddleTop);
 
             // Docking ports (radius 0.65, length 0.15, 0.05 protruding)
@@ -96,18 +96,18 @@
             const portMaterial = new THREE.MeshBasicMaterial({ color: 0xaaaaaa, wireframe: true });
             // Bottom port
             const portBottom = new THREE.Mesh(portGeometry, portMaterial);
-            portBottom.position.y = -4.275; // -4.15 - 0.15 + 0.025 (center so 0.05 protrudes)
+            portBottom.position.y = -4.375; // -4.15 - 0.15 - 0.075 + 0.025 (center so 0.05 protrudes)
             station.add(portBottom);
             // Top port
             const portTop = new THREE.Mesh(portGeometry, portMaterial);
-            portTop.position.y = 6.075; // 5.95 + 0.15 - 0.025 (center so 0.05 protrudes)
+            portTop.position.y = 6.175; // 5.95 + 0.15 + 0.075 - 0.025 (center so 0.05 protrudes)
             station.add(portTop);
             // Middle ports
             const portMiddleBottom = new THREE.Mesh(portGeometry, portMaterial);
-            portMiddleBottom.position.y = 0.075; // 0.15 - 0.075 (center so 0.05 protrudes below)
+            portMiddleBottom.position.y = -0.025; // 0.15 - 0.15 - 0.075 + 0.025 (below middle)
             station.add(portMiddleBottom);
             const portMiddleTop = new THREE.Mesh(portGeometry, portMaterial);
-            portMiddleTop.position.y = 0.525; // 0.45 + 0.075 (center so 0.05 protrudes above)
+            portMiddleTop.position.y = 0.625; // 0.45 + 0.15 + 0.075 - 0.025 (above middle)
             station.add(portMiddleTop);
 
             scene.add(station);
