--- a/test-game.html
+++ b/test-game.html
@@ -57,68 +57,68 @@
             // Station group
             const station = new THREE.Group();
 
-            // Module 1 (short, bottom)
+            // Module 1 (short, bottom) - Gray
             const shortModuleGeometry = new THREE.CylinderGeometry(1.3, 1.3, 4, 32);
-            const moduleMaterial = new THREE.MeshBasicMaterial({ color: 0x666666 }); // Solid for clarity
+            const moduleMaterial = new THREE.MeshBasicMaterial({ color: 0x666666 });
             const module1 = new THREE.Mesh(shortModuleGeometry, moduleMaterial);
             module1.position.y = -2;
             station.add(module1);
-            console.log('Module 1: radius 1.3, length 4, y = -2');
+            console.log('Module 1: radius 1.3, length 4, y = -2, color: gray');
 
-            // Module 2 (habitat, top)
+            // Module 2 (habitat, top) - Gray
             const habitatModuleGeometry = new THREE.CylinderGeometry(1.3, 1.3, 5.6, 32);
             const module2 = new THREE.Mesh(habitatModuleGeometry, moduleMaterial);
             module2.position.y = 2.8;
             station.add(module2);
-            console.log('Module 2: radius 1.3, length 5.6, y = 2.8');
+            console.log('Module 2: radius 1.3, length 5.6, y = 2.8, color: gray');
 
-            // Conical ends
-            const coneGeometry = new THREE.CylinderGeometry(1.3, 0.65, 0.3, 32); // Wide at module, narrow at port
-            const coneMaterial = new THREE.MeshBasicMaterial({ color: 0x888888 });
+            // Conical ends - Light Green
+            const coneGeometry = new THREE.CylinderGeometry(1.3, 0.65, 0.3, 32);
+            const coneMaterial = new THREE.MeshBasicMaterial({ color: 0x90EE90 });
             // Bottom end
             const coneBottom = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneBottom.position.y = -4.15; // -2 - 2 - 0.15
+            coneBottom.position.y = -4.15;
             coneBottom.rotation.x = Math.PI; // Wide end at module
             station.add(coneBottom);
-            console.log('Cone Bottom: base 1.3, top 0.65, y = -4.15');
+            console.log('Cone Bottom: base 1.3, top 0.65, y = -4.15, color: light green');
             // Top end
             const coneTop = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneTop.position.y = 5.95; // 2.8 + 2.8 + 0.15
+            coneTop.position.y = 5.95;
             station.add(coneTop);
-            console.log('Cone Top: base 1.3, top 0.65, y = 5.95');
+            console.log('Cone Top: base 1.3, top 0.65, y = 5.95, color: light green');
             // Middle
             const coneMiddleBottom = new THREE.Mesh(coneGeometry, coneMaterial);
             coneMiddleBottom.position.y = 0.15;
             coneMiddleBottom.rotation.x = Math.PI;
             station.add(coneMiddleBottom);
-            console.log('Cone Middle Bottom: base 1.3, top 0.65, y = 0.15');
+            console.log('Cone Middle Bottom: base 1.3, top 0.65, y = 0.15, color: light green');
             const coneMiddleTop = new THREE.Mesh(coneGeometry, coneMaterial);
             coneMiddleTop.position.y = 0.45;
             station.add(coneMiddleTop);
-            console.log('Cone Middle Top: base 1.3, top 0.65, y = 0.45');
+            console.log('Cone Middle Top: base 1.3, top 0.65, y = 0.45, color: light green');
 
-            // Docking ports
+            // Docking ports - Light Blue
             const portGeometry = new THREE.CylinderGeometry(0.65, 0.65, 0.15, 32);
-            const portMaterial = new THREE.MeshBasicMaterial({ color: 0xaaaaaa });
+            const portMaterial = new THREE.MeshBasicMaterial({ color: 0x87CEEB });
             // Bottom port
             const portBottom = new THREE.Mesh(portGeometry, portMaterial);
-            portBottom.position.y = -4.375; // -4.15 - 0.15 - 0.075 + 0.025
+            portBottom.position.y = -4.375;
             station.add(portBottom);
-            console.log('Port Bottom: radius 0.65, y = -4.375');
+            console.log('Port Bottom: radius 0.65, y = -4.375, color: light blue');
             // Top port
             const portTop = new THREE.Mesh(portGeometry, portMaterial);
-            portTop.position.y = 6.175; // 5.95 + 0.15 + 0.075 - 0.025
+            portTop.position.y = 6.175;
             station.add(portTop);
-            console.log('Port Top: radius 0.65, y = 6.175');
+            console.log('Port Top: radius 0.65, y = 6.175, color: light blue');
             // Middle ports
             const portMiddleBottom = new THREE.Mesh(portGeometry, portMaterial);
-            portMiddleBottom.position.y = -0.025; // 0.15 - 0.15 - 0.075 + 0.025
+            portMiddleBottom.position.y = -0.025;
             station.add(portMiddleBottom);
-            console.log('Port Middle Bottom: radius 0.65, y = -0.025');
+            console.log('Port Middle Bottom: radius 0.65, y = -0.025, color: light blue');
             const portMiddleTop = new THREE.Mesh(portGeometry, portMaterial);
-            portMiddleTop.position.y = 0.625; // 0.45 + 0.15 + 0.075 - 0.025
+            portMiddleTop.position.y = 0.625;
             station.add(portMiddleTop);
-            console.log('Port Middle Top: radius 0.65, y = 0.625');
+            console.log('Port Middle Top: radius 0.65, y = 0.625, color: light blue');
 
             scene.add(station);
 
@@ -126,7 +126,8 @@
 
             function animate() {
                 requestAnimationFrame(animate);
-                station.rotation.y += 0.005;
+                station.rotation.y += 0.005; // Faster Y-axis spin
+                station.rotation.x += 0.002; // Slower X-axis spin
                 renderer.render(scene, camera);
             }
             animate();
