--- a/test-game.html
+++ b/test-game.html
@@ -63,62 +63,62 @@
             const module1 = new THREE.Mesh(shortModuleGeometry, moduleMaterial);
             module1.position.y = -2;
             station.add(module1);
-            console.log('Module 1: radius 1.3, length 4, y = -2, color: gray');
+            console.log('Module 1: radius 1.3, length 4, y = -2, ends at y = -4 and 0, color: gray');
 
             // Module 2 (habitat, top) - Gray
             const habitatModuleGeometry = new THREE.CylinderGeometry(1.3, 1.3, 5.6, 32);
             const module2 = new THREE.Mesh(habitatModuleGeometry, moduleMaterial);
-            module2.position.y = 2.8;
+            module2.position.y = 2.95; // Adjusted: 0.3/2 + 5.6/2
             station.add(module2);
-            console.log('Module 2: radius 1.3, length 5.6, y = 2.8, color: gray');
+            console.log('Module 2: radius 1.3, length 5.6, y = 2.95, ends at y = 0.15 and 5.75, color: gray');
 
-            // Conical ends - Light Green (fixed orientation and position)
+            // Conical ends - Light Green
             const coneGeometry = new THREE.CylinderGeometry(0.65, 1.3, 0.3, 32); // Narrow top, wide bottom
             const coneMaterial = new THREE.MeshBasicMaterial({ color: 0x90EE90 });
             // Bottom end
             const coneBottom = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneBottom.position.y = -4; // -2 - 2 (flush with module end)
+            coneBottom.position.y = -4.15; // Wide end at -4, narrow at -3.85
             station.add(coneBottom);
-            console.log('Cone Bottom: top 0.65, base 1.3, y = -4, color: light green');
+            console.log('Cone Bottom: top 0.65, base 1.3, y = -4.15, wide at -4, narrow at -3.85, color: light green');
             // Top end
             const coneTop = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneTop.position.y = 5.6; // 2.8 + 2.8 (flush with module end)
-            coneTop.rotation.x = Math.PI; // Flip so narrow end faces port
+            coneTop.position.y = 5.6; // Wide end at 5.75, narrow at 5.9
+            coneTop.rotation.x = Math.PI; // Flip: wide at 5.75, narrow at 5.45
             station.add(coneTop);
-            console.log('Cone Top: top 0.65, base 1.3, y = 5.6, color: light green');
+            console.log('Cone Top: top 0.65, base 1.3, y = 5.6, wide at 5.75, narrow at 5.45, color: light green');
             // Middle
             const coneMiddleBottom = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneMiddleBottom.position.y = 0; // Bottom module end
+            coneMiddleBottom.position.y = 0; // Wide end at 0, narrow at 0.3
             station.add(coneMiddleBottom);
-            console.log('Cone Middle Bottom: top 0.65, base 1.3, y = 0, color: light green');
+            console.log('Cone Middle Bottom: top 0.65, base 1.3, y = 0, wide at 0, narrow at 0.3, color: light green');
             const coneMiddleTop = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneMiddleTop.position.y = 0.3; // Top module start, adjusted for no gap
-            coneMiddleTop.rotation.x = Math.PI; // Flip
+            coneMiddleTop.position.y = 0.15; // Wide end at 0.15, narrow at 0.45
+            coneMiddleTop.rotation.x = Math.PI; // Flip: wide at 0.15, narrow at -0.15
             station.add(coneMiddleTop);
-            console.log('Cone Middle Top: top 0.65, base 1.3, y = 0.3, color: light green');
+            console.log('Cone Middle Top: top 0.65, base 1.3, y = 0.15, wide at 0.15, narrow at -0.15, color: light green');
 
             // Docking ports - Light Blue
             const portGeometry = new THREE.CylinderGeometry(0.65, 0.65, 0.15, 32);
             const portMaterial = new THREE.MeshBasicMaterial({ color: 0x87CEEB });
             // Bottom port
             const portBottom = new THREE.Mesh(portGeometry, portMaterial);
-            portBottom.position.y = -4.225; // -4 - 0.15 - 0.075 + 0.025 (0.05 protrudes)
+            portBottom.position.y = -3.925; // -3.85 - 0.075 (center, 0.05 protrudes to -3.8)
             station.add(portBottom);
-            console.log('Port Bottom: radius 0.65, y = -4.225, color: light blue');
+            console.log('Port Bottom: radius 0.65, y = -3.925, protrudes to -3.8, color: light blue');
             // Top port
             const portTop = new THREE.Mesh(portGeometry, portMaterial);
-            portTop.position.y = 5.825; // 5.6 + 0.15 + 0.075 - 0.025 (0.05 protrudes)
+            portTop.position.y = 5.675; // 5.45 + 0.225 (center, 0.05 protrudes to 5.5)
             station.add(portTop);
-            console.log('Port Top: radius 0.65, y = 5.825, color: light blue');
+            console.log('Port Top: radius 0.65, y = 5.675, protrudes to 5.8, color: light blue');
             // Middle ports
             const portMiddleBottom = new THREE.Mesh(portGeometry, portMaterial);
-            portMiddleBottom.position.y = -0.225; // 0 - 0.15 - 0.075 + 0.025
+            portMiddleBottom.position.y = 0.075; // 0.3 - 0.225 (center, 0.05 protrudes to 0.15)
             station.add(portMiddleBottom);
-            console.log('Port Middle Bottom: radius 0.65, y = -0.225, color: light blue');
+            console.log('Port Middle Bottom: radius 0.65, y = 0.075, protrudes to 0.15, color: light blue');
             const portMiddleTop = new THREE.Mesh(portGeometry, portMaterial);
-            portMiddleTop.position.y = 0.525; // 0.3 + 0.15 + 0.075 - 0.025
+            portMiddleTop.position.y = -0.075; // -0.15 + 0.075 (center, 0.05 protrudes to -0.15)
             station.add(portMiddleTop);
-            console.log('Port Middle Top: radius 0.65, y = 0.525, color: light blue');
+            console.log('Port Middle Top: radius 0.65, y = -0.075, protrudes to 0, color: light blue');
 
             scene.add(station);
 
