--- a/test-game.html
+++ b/test-game.html
@@ -66,33 +66,33 @@
             console.log('Module: radius 1.3, length 4, y = 0, ends at y = -2 and 2, color: gray');
 
             // Conical ends - Light Green
-            const coneGeometry = new THREE.CylinderGeometry(0.65, 1.3, 0.5, 32); // Wide top, narrow bottom
+            const coneGeometry = new THREE.CylinderGeometry(0.65, 1.3, 0.5, 32); // Narrow top, wide bottom
             const coneMaterial = new THREE.MeshBasicMaterial({ color: 0x90EE90 });
             // Bottom cone
             const coneBottom = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneBottom.position.y = -2.25;
-            coneBottom.rotation.x = Math.PI; 
+            coneBottom.position.y = -2.25; // Wide at -2, narrow at -2.5
+            coneBottom.rotation.x = Math.PI; // Flip to align wide end with module
             station.add(coneBottom);
-            console.log('Cone Bottom: top 1.3, base 0.65, y = -1.85, wide at -2, narrow at -1.7, color: light green');
+            console.log('Cone Bottom: top 0.65, base 1.3, y = -2.25, narrow at -2.5, wide at -2, color: light green');
             // Top cone
             const coneTop = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneTop.position.y = 2.25;
+            coneTop.position.y = 2.25; // Wide at 2, narrow at 2.5
             station.add(coneTop);
-            console.log('Cone Top: top 1.3, base 0.65, y = 1.85, wide at 2, narrow at 1.7, color: light green');
+            console.log('Cone Top: top 0.65, base 1.3, y = 2.25, narrow at 2.5, wide at 2, color: light green');
 
             // Docking ports - Light Blue
             const portGeometry = new THREE.CylinderGeometry(0.65, 0.65, 0.15, 32);
             const portMaterial = new THREE.MeshBasicMaterial({ color: 0x87CEEB });
             // Bottom port
             const portBottom = new THREE.Mesh(portGeometry, portMaterial);
-            portBottom.position.y = -2.5; // -1.7 + 0.075 - 0.15 (protrudes to -1.65)
+            portBottom.position.y = -2.5; // Center at -2.5, spans -2.575 to -2.425
             station.add(portBottom);
-            console.log('Port Bottom: radius 0.65, y = -1.775, protrudes to -1.65, color: light blue');
+            console.log('Port Bottom: radius 0.65, y = -2.5, spans -2.575 to -2.425, color: light blue');
             // Top port
             const portTop = new THREE.Mesh(portGeometry, portMaterial);
-            portTop.position.y = 2.5; // 1.7 + 0.075 (protrudes to 1.85)
+            portTop.position.y = 2.5; // Center at 2.5, spans 2.425 to 2.575
             station.add(portTop);
-            console.log('Port Top: radius 0.65, y = 1.775, protrudes to 1.85, color: light blue');
+            console.log('Port Top: radius 0.65, y = 2.5, spans 2.425 to 2.575, color: light blue');
 
             scene.add(station);
 
